--- a/_posts/2018-11-11-ARTS_Week1_1111.md
+++ b/_posts/2018-11-11-ARTS_Week1_1111.md
@@ -128,7 +128,7 @@ For example, z foo bar would match /foo/bar but not /bar/foo.
 
 I have made a demo record here, for your reference:
 
-[![asciicast](https://asciinema.org/a/211214.svg)](https://asciinema.org/a/211214)
+[![asciicast](https://asciinema.org/a/211214.svg)](https://asciinema.org/a/211214 =250x)
 
 ## Share
 
