fix disqus issue

--- a/_posts/2018-11-11-ARTS_Week1_1111.md
+++ b/_posts/2018-11-11-ARTS_Week1_1111.md
@@ -108,9 +108,9 @@ I will extract some useful tips below:
 1. It uses three level version method: MAJOR.MINOR.PATCH
 2. Software using Semantic Versioning MUST declare a public API, and it is your responsibility as a professional developer to properly document software that is intended for use by others.
 3. Major version zero (0.y.z) is for initial development
-4. Patch version Z (x.y.Z | x > 0) MUST be incremented if only backwards compatible bug fixes are introduced. 
-5. Minor version Y (x.Y.z | x > 0) MUST be incremented if new, backwards compatible functionality is introduced to the public API
-6. Major version X (X.y.z | X > 0) MUST be incremented if any backwards incompatible changes are introduced to the public API.
+4. Patch version Z (x.y.Z, x > 0) MUST be incremented if only backwards compatible bug fixes are introduced. 
+5. Minor version Y (x.Y.z, x > 0) MUST be incremented if new, backwards compatible functionality is introduced to the public API
+6. Major version X (X.y.z, X > 0) MUST be incremented if any backwards incompatible changes are introduced to the public API.
 
 ## Tip
 
@@ -128,7 +128,7 @@ For example, z foo bar would match /foo/bar but not /bar/foo.
 
 I have made a demo record here, for your reference:
 
-[![asciicast](https://asciinema.org/a/211214.svg)](https://asciinema.org/a/211214 =250x)
+[![asciicast](https://asciinema.org/a/211214.svg)](https://asciinema.org/a/211214)
 
 ## Share
 
