fix image url error in ARTS-week3

--- a/_posts/2018-11-23-ARTS_Week3.md
+++ b/_posts/2018-11-23-ARTS_Week3.md
@@ -21,7 +21,8 @@ At the first glance, I thought this problem has relation to [longest non-repeati
 
 Then, I tried to change this problem to iterate all the lines and find the container whoes right border is the new line and contains the most water. 
 
-![](../images/leetcode11.png)
+<a href="{{ site.url }}/images/leetcode11.png" target="_blank"><img src="{{ site.url }}/images/leetcode11.png"  alt="img" height="200px" align="center"/></a>
+
 
 However, I found that left border of the new container and previous container had no obvious relationship. It may be at any position, left or right to the previous left border, and it's hard to judge with O(1) complexity.
 
@@ -35,7 +36,7 @@ We use two position index to indicate the left and right border of the container
 
 The following graph showes that if we move the border with larger value, the formed area will definitely decrease. So our strategy is to move the shorter line.
 
-![](../images/leetcode11_2.png)
+<a href="{{ site.url }}/images/leetcode11_2.png" target="_blank"><img src="{{ site.url }}/images/leetcode11_2.png"  alt="img" height="200px" align="center"/></a>
 
 If you have already captured the theory in it, the code will be very simple.
 
@@ -103,7 +104,7 @@ Whenever you wanna explain something hard to others, you can add a case comics t
 
 And I have made a simple demonstration about what is ARTS, and I think it's quite fun.
 
-![](../images/ARTS.png)
+<a href="{{ site.url }}/images/ARTS.png" target="_blank"><img src="{{ site.url }}/images/ARTS.png"  alt="img" height="400px" align="center"/></a>
 
 Hope you will like it, and come on to make one yourself.
 
