add code highlight

--- a/_posts/2018-11-23-ARTS_Week3.md
+++ b/_posts/2018-11-23-ARTS_Week3.md
@@ -40,7 +40,8 @@ The following graph showes that if we move the border with larger value, the for
 
 If you have already captured the theory in it, the code will be very simple.
 
-```
+```cpp
+
 class Solution {
 public:
     int maxArea(vector<int>& height) {
@@ -64,6 +65,7 @@ public:
         return max_area;
     }
 };
+
 ```
 
 ## Review
