rename first ARTS

--- a/_posts/2018-11-11-ARTS_Week1.md
+++ b/_posts/2018-11-11-ARTS_Week1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "ARTS-Week1_20181111"
+title:  "ARTS-Week1"
 date:   2018-11-11
 excerpt: "ARTS weekly"
 image: "/images/git.png"
