modify inline code block

--- a/_posts/2018-11-11-ARTS_Week1.md
+++ b/_posts/2018-11-11-ARTS_Week1.md
@@ -33,7 +33,7 @@ After I have submit my first version using above method, I analysed it with divi
 
 Result link is pasted [here](https://leetcode.com/submissions/detail/188756682/)
 
-```
+```cpp
 /**
  * Definition for singly-linked list.
  * struct ListNode {
