--- a/_posts/2018-11-14-ARTS_Week2.md
+++ b/_posts/2018-11-14-ARTS_Week2.md
@@ -31,7 +31,7 @@ Explanation: The answer is "abc", with the length of 3.
 
 The direction is to check all the possible substring if it's a valid non-repeating string. The inner most operation which checks if a substring is the one that has none repeating character, is of time complexity O(n), so the total time complexity will be O(n3), where n indicates the length of input string;
 
-```
+```cpp
 for head_index in 0 to end
 	for trail_index in end to head_index+1
 		if substring(head_index, trail_index) is valid non-repeating string
@@ -53,7 +53,7 @@ After we have iterated all characters in `s`, the largest one in C(i) will corre
 
 Because we donot need to know the exact start and end position of this substring, but only the max length, so we only need two variable, one holds the current max and b[i] for previous index i.
 
-```
+```cpp
 max_total <- 0
 b_pre <- 0
 
@@ -78,7 +78,7 @@ We use an map `visited` to hold the latest index of new character `c`. For each 
 Let's demonstrate it with code:
 
 
-```
+```cpp
 max_local <- 0
 max_total <- 0
 visited <- empty map
@@ -145,7 +145,7 @@ If you are a Latex expert, you can input math equations after Latex synatx, or y
 
 Take Mass–energy equivalence for example. After you have finished input, you can paste the html code directly to your Markdown note.
 
-```
+```viml
 <a href="https://www.codecogs.com/eqnedit.php?latex=E&space;=&space;m*c^2" target="_blank"><img src="https://latex.codecogs.com/gif.latex?E&space;=&space;m*c^2" title="E = m*c^2" /></a>
 ```
 
