--- a/_posts/2018-11-23-ARTS_Week3.md
+++ b/_posts/2018-11-23-ARTS_Week3.md
@@ -86,12 +86,12 @@ Do you have any idea about how to do this? Yeah, you can use Excel or Numbers, a
 
 Look the sql code example: 
 
-```
+```viml
 q "SELECT * from imu.txt where c1 < 278.5 and c6 < -10" > imu_sql.txt
 ```
 Then you get the filtered records as follows:
 
-```
+```viml
 278.379 -0.006391999777 0.002130999928 -0.006391999777 -0.3038569987 -10.00097656 -0.07895500213
 278.383 -0.006391999777 0.001597999944 -0.006391999777 -0.3014650047 -10.00097656 -0.09091799706
 278.387 -0.006391999777 0.002130999928 -0.006391999777 -0.3038569987 -10.00097656 -0.09091799706
