fix syntax error in ARTS-Week 9

--- a/_posts/2019-01-05-ARTS_Week9.md
+++ b/_posts/2019-01-05-ARTS_Week9.md
@@ -44,11 +44,11 @@ For a fully sorted array in ascending order, if target is greater than middle, t
 
 But it's not actual for a rotated array in this problem, unless importing some tricks.
 
-Rotating at a pivot makes the initial sorted array to two parts, both of which are in still ascending order. And the elements of first part will be greater than anyone of the second part.
+Rotating at a pivot divides the initial sorted array to two parts. Both parts are still in ascending order, and what's more, element of first part is greater than anyone of the second part.
 
-We can compare the middle and target to check if the target is at the same part with the middle. If they are, we can then search in this part directly, and the following search becomes a normal binary-search problem.
+We can compare the middle and target to check if they are at the same part. If they are in either part, we can then search in this part directly, and the following search becomes a normal binary-search problem.
 
-But if the middle and the target is at the opposite part, then we must modify the middle value to -INIFITY or +INIFITY according to the part the middle embeddes in, to pretend that the array is a fully sorted array. Afterwards, the binary-search can proceed.
+But what if the middle and the target are at the opposite part? If it happens, we must modify the middle value to -INIFITY or +INIFITY according to the part the middle embeddes in, pretending that the array is a fully sorted array. Afterwards, the binary-search should proceed.
 
 Following two simple examples demonstrate the gennius thought.
 
