fix: adapt to the mobile devices

--- a/_posts/2024-02-01-Obsidian.md
+++ b/_posts/2024-02-01-Obsidian.md
@@ -1,11 +1,12 @@
 ---
+toc: true
 layout: post
 title:  "Obsidian，私人PKM助理"
 date:   2024-02-01
 excerpt: "好用的一批"
 image: ""
 comments: true
-toc: false
+toc: true
 tags: Y-2024 工具
 ---
 
