--- a/_posts/2024-02-18-IDE_setup.md
+++ b/_posts/2024-02-18-IDE_setup.md
@@ -1,11 +1,12 @@
 ---
+toc: true
 layout: post
 title:  "你真的会用IDE吗？"
 date:   2024-02-18
 excerpt: "跟鼠标说再见"
 image: ""
 comments: true
-toc: false
+toc: true
 tags: Y-2024 IDE
 ---
 
