--- a/_posts/2025-03-01-SO(3)_Log.md
+++ b/_posts/2025-03-01-SO(3)_Log.md
@@ -1,11 +1,12 @@
 ---
+toc: true
 layout: post
 title:  "SO(3) Logarithm"
 date:   2025-03-01
 excerpt: "AI Chat Series"
 image: ""
 comments: true
-toc: false
+toc: true
 tags: Y-2025 SO3 AI_Assistant_Programming
 ---
 
