fix: center-align footer and paragraph text for improved readability

--- a/_posts/2025-08-22-SFINAE.md
+++ b/_posts/2025-08-22-SFINAE.md
@@ -8,7 +8,7 @@ image: ""
 comments: true
 excerpt: "C++ 模板元编程"
 toc: true
-tags: Y-2025 CPP SFINAE AI_Assistant_Programming
+tags: Y-2025 c++
 ---
 
 > 本文是AI Chat系列文章的第8篇，介绍C++中的SFINAE机制。
