--- a/_posts/2025-09-13-KLT_SVD.md
+++ b/_posts/2025-09-13-KLT_SVD.md
@@ -8,7 +8,7 @@ image: ""
 comments: true
 excerpt: "详解KLT跟SVD的关系"
 toc: true
-tags: Y-2025 math AI_Assistant_Programming
+tags: Y-2025 math
 ---
 
 > 本文是AI Chat系列文章的第10篇，介绍统计数学中的KLT变换与线性代数中SVD分解的关系。
