feat: update site title, add archive layout, and enhance navigation links

--- a/_posts/2025-08-22-SFINAE.md
+++ b/_posts/2025-08-22-SFINAE.md
@@ -7,7 +7,7 @@ image: ""
 comments: true
 excerpt: "C++ 模板元编程"
 toc: true
-tags: Y-2025 c++
+tags: cpp
 ---
 
 > 本文是AI Chat系列文章的第8篇，介绍C++中的SFINAE机制。
